force-app/main/default/objects/kfsell__Gold_Sheet__c/kfsell__Gold_Sheet__c.object-meta.xml
<CustomObject>
    <label>Fields of Play / Gold Sheet</label>
    <nameField>
        <displayFormat>GS- {00000}</displayFormat>
        <label>Gold Sheet</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fields of Play / Gold Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>