force-app/main/default/objects/kfsell__Gold_Sheet__c/fields/kfsell__Goals_Present__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Goals_Present__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Goal Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>