force-app/main/default/objects/kfsell__Gold_Sheet__c/fields/kfsell__New_Opportunity_Count__c.field-meta.xml
<CustomField>
    <fullName>kfsell__New_Opportunity_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Linked Opportunity Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>