force-app/main/default/objects/kfsell__Gold_Sheet__c/fields/kfsell__Strategic_Player_Key_Player__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Strategic_Player_Key_Player__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Key Player</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>